--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,14 +7,73 @@ ver 0.1
 /* pc styles min width 1080px; */
 body{
     width: 100vw;
-    min-height: 100vh;
+    max-width: 100vw;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+header{
+    width: 100%;
+    height: 50px;
+    box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.75);
+}
+
+menu{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+menu > ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+menu ul li a{
+    background: none;
+    color: black;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #30C5FF;
+}
+
+.main{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    min-height: calc(100vh - 50px - 138px);
+    margin: 0;
+    padding: 0;
 }
 
 .wrapper{
-    width: 80%;
-    min-height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 138px;
+    background: #2A2D34;
+    color: #ffffff;
 }
