--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,16 +17,20 @@ white - #FFFFFF;
 
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 
-.abel-regular {
-    font-family: "Abel", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
 
 /* pc styles min width 1080px; */
 
 [class] {
     display: flex;
+}
+
+p{
+    margin: 0;
+}
+
+button, a{
+    cursor: pointer;
+    padding: 0;
 }
 
 body{
@@ -36,6 +40,9 @@ body{
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    font-family: "Abel", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 header{
@@ -47,7 +54,7 @@ header{
 }
 
 .header{
-    width: calc(100% - 44px);
+    width: 1204px;
     min-height: 80px;
     flex-direction: row;
     justify-content: space-between;
@@ -69,9 +76,9 @@ header{
 
 menu{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
+    flex-direction: space-between;
+    justify-content: space-between;
+    width: 1204px;
     height: 100%;
     margin: 0 auto;
     padding: 0;
@@ -94,10 +101,6 @@ menu ul li a{
     background: none;
     color: #76767A;
     text-decoration: none;
-}
-
-a:hover{
-    color: #30C5FF;
 }
 
 .loginBox > a{
@@ -127,17 +130,18 @@ a:hover{
     width: 100%;
     border: 1px solid #76767A;
     border-radius: 12px;
-    padding: 20px;
+    padding: 5px 10px;
 }
 
 .search svg{
     height: 25px;
-    margin-left: -40px;
+    margin-right: 15px;
 }
 
-.main{
+main{
     display: flex;
     flex-direction: column;
+    align-items: center;
     min-height: calc(100vh - 50px - 138px);
     width: 100%;
     margin: 0;
@@ -149,18 +153,354 @@ a:hover{
 }
 
 .wrapper{
-    z-index: 3;
     margin: 0;
+    width: 1204px;
+    margin-top: 80px;
     padding: 0;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+/* widget styles */
+
+.widgetBox{
+    width: 266px;
+    min-height: 100px;
+    flex-direction: column;
+}
+
+.widgetBlock{
+    flex-direction: column;
+    align-items: center;
+    width: 245px;
+    min-height: 186px;
+    font-size: 14px;
+    border-radius: 10px;
+    opacity: 0px;
+    background-color: #ffffff;
+    margin-bottom: 32px;
+    padding: 0 15px 30px 15px;
+    box-shadow: 0px 3px 10px 0px #00000014;
+}
+
+.titleWidget{
+    align-self: flex-start;
+    font-size: 14px;
+    font-weight: 400;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
+.weatherContainer{
+    margin-top: 38px;
+}
+
+.eventItemContainer{
+    flex-direction: column;
+    justify-content: center;
+    text-decoration: none;
+    width: 100%;
+    padding: 0;
+    margin: 0 0 30px 0;
+}
+
+.eventItem{
+    flex-direction: column;
+    align-items: center;
+}
+
+.eventItemText{
+    margin: 5px 0 5px 0;
+    line-height: 24px;
+    text-align: center;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
+.learnMoreButton{
+    display: block;
+    width: 142px;
+    height: 39px;
+    border: 1px 0px 0px 0px;
+    opacity: 0.2px;
+    border: 1px solid #1875F0;
+    letter-spacing: 0.40194278955459595px;
+    text-align: center;
+    text-decoration-skip-ink: none;
+    color: #1875F0;
+    background: transparent;
+    border-radius: 5px;
+}
+
+/* content block style main */
+
+.contentBlock{
+    flex-direction: column;
+    min-height: 100px;
+    width: 875px;
+}
+
+.latestNewsBlock{
+    flex-direction: column;
+    width: calc(100% - 54px);
+    height: 316px;
+    top: 240px;
+    left: 118px;
+    border-radius: 25px;
+    background: #222222;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    padding: 20px 27px 35px 27px;
+}
+
+.infoBox{
+    width: 100%;
+    align-items: center;
+    justify-content:flex-end;
+}
+
+.infoBox > p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.titleLatest{
+    flex-grow: 1;
+    font-size: 24px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+
+.categoryItem{
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 21px;
+    color: #1875F0;
+    margin-right: 15px;
+}
+
+.dateBlock{
+    font-size: 12px;
+    font-weight: 500;
+    color: #999999;
+}
+
+.contentLatestBlock{
+    margin-top: 20px;
+    flex-direction: row;
+}
+
+.contentLatestBlock > img{
+    width: 280px;
+    height: 280px;
+}
+
+.contentLatestBoxItem{
+    margin-left: 56px;
+    flex-direction: column;
+}
+
+.contentLatestTitle{
+    flex-grow: 2;
+    font-family: Abel;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 45px;
+    letter-spacing: -1px;
+    color: #DADADA;
+}
+
+.contentLatestItemText{
+    flex-grow: 5;
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #BEBEBE;
+}
+
+.readMoreButton{
+    flex-grow: 1;
+    display: block;
+    width: 100px;
+    max-height: 30px;
+    border-radius: 8px;
+    border: none;
+    color: #333333;
+    font-family: Abel;
+    font-size: 16px;
+    font-weight: 400;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.newsBlock{
+    margin-top: 32px;
+    flex-direction: column;
+}
+
+.titleNewsBlock{
+    margin: 0 0 20px 27px;
+}
+
+.newsItemBox{
+    width: 100%;
+    flex-direction: column;
+}
+
+.newsItemLine{
+    flex-direction: row;
+    justify-content: space-between;
+    max-height: 317px;
+}
+
+.newsItem{
+    flex-direction: column;
+    width: 23%;
+}
+
+.newsImgItem{
+    width: 100%;
+    min-height: 150px;
+    aspect-ratio: auto 3/4;
+    border-radius: 15px;
+    background-color: #D9D9D9;
+    margin-bottom: 15px;
+}
+
+.titleItem{
+    margin: 10px 0 5px 0;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 20px;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+}
+
+.descriptionItem{
+    font-family: Abel;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
+.buttonViewAll{
+    display: block;
+    align-self: flex-end;
+    margin: 20px 0 0 0;
+    width: 100px;
+    height:30px;
+    border-radius: 8px;
+    border: 1px solid #EBEBF5;
+    background: #333333;
+    font-family: Abel;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #DADADA;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+/* subscribe block design */
+
+.subscribeContainer{
+    flex-direction: column;
+    align-items: center;
+    margin: 15px 0 0 0;
+    width: 100%;
+    height: 398px;
+    background: #222222;
+}
+
+.subscribeWrapper{
+    flex-direction: column;
+    align-items: center;
+    width: 1204px;
+}
+
+.subscribeWrapper > h1{
+    margin: 52px 0 0 0;
+    font-family: Abel;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 72px;
+    color: #FFFFFF;
+
+}
+
+.subscribeWrapper > span{
+    font-family: Abel;
+    font-size: 32px;
+    font-weight: 100;
+    line-height: 50px;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 0 0 40px 0;
+}
+
+.buttonBox{
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.subscribeButton{
+    display: block;
+    padding: 0;
+    width: 280px;
+    height: 63px;
+    border-radius: 8px;
+    opacity: 0px;
+    font-family: Abel;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #222222;
+    box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 footer{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 138px;
-    background: #2A2D34;
+    height: 344px;
+    background: #E6E9EA;
     color: #ffffff;
+}
+
+.footerMenu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 46px;
+    margin: 44px 0 22px 0;
+    padding: 0;
+    font-size: 24px;
+    width: 512px;
+}
+
+.footerMenu > ul > li > a{
+    color: #222222;
+}
+
+footer > .search{
+    margin-bottom:  27px;
+}
+
+footer > p{
+    text-align: center;
+    margin-top: 20px;
+    font-family: Abel;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 33.97px;
+    color: #222222;
 }
