--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,7 +50,7 @@ header{
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 161px;
+    box-shadow: 0px 3px 10px 0px #00000014;
 }
 
 .header{
@@ -79,7 +79,7 @@ menu{
     flex-direction: space-between;
     justify-content: space-between;
     width: 1204px;
-    height: 100%;
+    height: 80px;
     margin: 0 auto;
     padding: 0;
     font-size: 24px;
@@ -475,6 +475,14 @@ footer{
     color: #ffffff;
 }
 
+.subscribeWrapper > *{
+    width: 1000px;
+}
+
+.subscribeWrapper > h1{
+    text-align: center;
+}
+
 .footerMenu{
     display: flex;
     flex-direction: row;
@@ -503,4 +511,34 @@ footer > p{
     font-weight: 400;
     line-height: 33.97px;
     color: #222222;
+}
+
+
+/* logIn Page styles  */
+
+.no-background{
+    background: none;
+}
+
+.center{
+    justify-content: center;
+    align-items: center;
+}
+
+.logInConteiner{
+    width: 462px;
+    height: 380px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    box-shadow: 0px 3px 10px 0px #00000014;
+}
+
+.logInConteiner > h3{
+    font-family: Abel;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    text-decoration-skip-ink: none;
 }
