--- a/styles/styles.css
+++ b/styles/styles.css
@@ -191,10 +191,19 @@ main{
 
 .titleWidget{
     align-self: flex-start;
-    font-size: 14px;
+    font-size: 24px;
     font-weight: 400;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
+    text-align: left;
+    margin: 20px 0 0 15px;    
+}
+
+hr{
+    width: 96.2%;
+    height: 1px;
+    background: #F7F7F7;
+    border: 0;
 }
 
 .weatherContainer{
@@ -202,12 +211,23 @@ main{
 }
 
 .eventItemContainer{
-    flex-direction: column;
-    justify-content: center;
+    align-self: center;
+    flex-direction: row;
+    justify-content: space-between;
     text-decoration: none;
-    width: 100%;
-    padding: 0;
+    width: 75%;
+    padding-right: 55px;
     margin: 0 0 30px 0;
+}
+
+.eventBox{
+    width: 100%;
+    min-height: 100px;
+    flex-direction: column;
+    background: #ffffff;
+    margin: 37px 0 0 0;
+    box-shadow: 0px 3px 10px 0px #00000014;
+    border-radius: 15px;
 }
 
 .eventItem{
@@ -226,6 +246,7 @@ main{
 }
 
 .learnMoreButton{
+    align-self: center;
     width: 142px;
     height: 39px;
     border: 1px 0px 0px 0px;
@@ -237,6 +258,36 @@ main{
     color: #1875F0;
     background: transparent;
     border-radius: 5px;
+    margin: 0 0 30px 0;
+}
+
+
+.authorItemContainer{
+    align-self: center;
+    flex-direction: row;
+    justify-content: space-between;
+    text-decoration: none;
+    width: 90%;
+    margin: 0 0 30px 0;
+}
+
+.authorName{
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 45px;
+    letter-spacing: -1px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #1875F0;
+}
+
+.authorImg{
+    width: 150px;
+    height: 150px;
+    background: #D9D9D9;
+    border-radius: 100%;
+    box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 /* content block style main */
@@ -284,6 +335,8 @@ main{
     color: #1875F0;
     margin-right: 15px;
 }
+
+
 
 .dateBlock{
     font-size: 12px;
