--- a/styles/styles.css
+++ b/styles/styles.css
@@ -170,23 +170,70 @@ main{
 /* widget styles */
 
 .widgetBox{
-    width: 266px;
+    width: 300px;
     min-height: 100px;
     flex-direction: column;
 }
 
 .widgetBlock{
+    position: sticky;
+    top: 30px;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    width: 245px;
-    min-height: 186px;
+    width: 100%;
+    height: 1044.54px;
     font-size: 14px;
-    border-radius: 10px;
-    opacity: 0px;
-    background-color: #ffffff;
+    background: #333333B2;
     margin-bottom: 32px;
-    padding: 0 15px 30px 15px;
     box-shadow: 0px 3px 10px 0px #00000014;
+    border-radius: 15px;
+}
+
+/* subscribe block design */
+
+.subscribeTitle{
+    text-align: center;
+    font-family: Abel;
+    font-size: 42px;
+    font-weight: 400;
+    line-height: 72px;
+    color: #FFFFFF;
+}
+
+.subscribeText{
+    flex-direction: column;
+    font-family: Abel;
+    font-size: 27px;
+    font-weight: 400;
+    line-height: 50px;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 0 0 40px 0;
+    font-family: Abel;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
+.buttonBox{
+    width: 95%;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0 0 38px 0;
+}
+
+.subscribeButton{
+    padding: 0 5px 0 5px;
+    min-width: 100px;
+    height: 54px;
+    border-radius: 8px;
+    font-family: Abel;
+    font-size: 22px;
+    font-weight: 400;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #222222;
+    box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 .titleWidget{
@@ -225,7 +272,7 @@ hr{
     min-height: 100px;
     flex-direction: column;
     background: #ffffff;
-    margin: 37px 0 0 0;
+    margin: 37px 0 30px 0;
     box-shadow: 0px 3px 10px 0px #00000014;
     border-radius: 15px;
 }
@@ -268,7 +315,7 @@ hr{
     justify-content: space-between;
     text-decoration: none;
     width: 90%;
-    margin: 0 0 30px 0;
+    margin: 25px 0 30px 0;
 }
 
 .authorName{
@@ -296,6 +343,47 @@ hr{
     flex-direction: column;
     min-height: 100px;
     width: 875px;
+    padding: 0 0 200px 0;
+}
+
+.bigContentBox{
+    width: 100%;
+    margin: 0 0 40px 0;
+    justify-content: space-between !important;
+}
+
+.bigBox{
+    width: 616px !important;
+}
+
+.bigBox > div{
+    width: 100% !important;    
+}
+
+.bigBox > div > img{
+    height: 340px !important
+}
+
+.bigBox > div > .titleItem{
+    font-size: 24px !important;
+    margin: 10px 0 20px 0;
+}
+
+.bigBoxMini{
+    width: 205px !important;
+}
+
+.bigBoxMini > div{
+    flex-direction: column !important;
+    min-height: 100%;
+}
+
+.bigBoxMini > div > div{
+    width: 100% !important;
+}
+
+.bigBoxMini > div > div > img{
+    height: 150px !important;
 }
 
 .latestNewsBlock{
@@ -457,65 +545,6 @@ hr{
     font-size: 16px;
     line-height: 24px;
     color: #DADADA;
-    box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-/* subscribe block design */
-
-.subscribeContainer{
-    flex-direction: column;
-    align-items: center;
-    margin: 15px 0 0 0;
-    width: 100%;
-    height: 398px;
-    background: #222222;
-}
-
-.subscribeWrapper{
-    flex-direction: column;
-    align-items: center;
-    width: 1204px;
-}
-
-.subscribeWrapper > h1{
-    margin: 52px 0 0 0;
-    font-family: Abel;
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 72px;
-    color: #FFFFFF;
-
-}
-
-.subscribeWrapper > span{
-    font-family: Abel;
-    font-size: 32px;
-    font-weight: 100;
-    line-height: 50px;
-    text-align: center;
-    color: #FFFFFF;
-    margin: 0 0 40px 0;
-}
-
-.buttonBox{
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.subscribeButton{
-    padding: 0;
-    width: 280px;
-    height: 63px;
-    border-radius: 8px;
-    opacity: 0px;
-    font-family: Abel;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: #222222;
     box-shadow: 0px 4px 4px 0px #00000040;
 }
 
@@ -772,6 +801,15 @@ footer > p{
     border-radius: 3px;
     background: #F2F2F2;
     margin: 15px 25px 15px 25px;
+}
+
+.dateBlockLast{
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #999999;
 }
 
 .dateBlock > tr {
